# entain-case-test

./: .gitignore  Dockerfile  README.md  jr-mle-task.docx  pyproject.toml
.github/scripts/: run_lint.sh  run_tests.sh
.github/workflows/: lint.yml  tests.yml
docs/: architecture.md  design_note.md
outputs/: run_manifest.json
outputs/features/: customer_features.parquet  feature_report.json
outputs/features/runs/run-2026-06-19T01-57-58Z/: _SUCCESS  run_manifest.json
outputs/features/runs/run-2026-06-19T01-57-58Z/features/: feature_report.json
outputs/features/runs/run-2026-06-19T01-57-58Z/validation/: validation_report.json
outputs/runs/run-2026-06-19T10-06-46Z/: _SUCCESS  run_manifest.json
outputs/runs/run-2026-06-19T10-06-46Z/features/: feature_report.json
outputs/runs/run-2026-06-19T10-06-46Z/features/customer_features/: part-00000.parquet  part-00001.parquet  (+6 more)
outputs/runs/run-2026-06-19T10-06-46Z/validation/: validation_report.json
outputs/validation/: invalid_bets.parquet  validation_report.json
outputs/validation/runs/run-2026-06-19T01-57-42Z/: _SUCCESS  run_manifest.json
src/bet_pipeline/: __init__.py  batch.py  cli.py  features.py  io.py  main.py  schema.py  validation.py
src/bet_pipeline/batch_process/: __init__.py  feature_batch.py  raw_partition_batch.py  run_artifacts.py  validation_batch.py
tests/: test_batch_workflow.py  test_features.py  test_main.py  test_validation.py
tests/integrate/: test_docker_pipeline.py
tests/integrate/fixtures/: bets.csv
tests/unit/: test_batch_workflow.py  test_features.py  test_main.py
(+47 files in other folders)
