[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "entain-bet-pipeline"
version = "0.1.0"
description = "Local batch validation and customer feature pipeline for betting data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Entain case study" }
]
dependencies = [
  "pyarrow>=16",
]

[project.optional-dependencies]
dev = [
  "coverage>=7",
  "pytest>=8",
  "ruff>=0.8",
]

[dependency-groups]
dev = [
  "coverage>=7",
  "pytest>=8",
  "ruff>=0.8",
]

[project.scripts]
bet-pipeline = "bet_pipeline.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "ARG",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PL",
  "RUF",
  "SIM",
  "UP",
]
ignore = [
  "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ARG002",
  "PLR0915",
]
